Enable sync handler to resolve pull requests
Close #50

--- a/app/di.yml
+++ b/app/di.yml
@@ -244,6 +244,7 @@ services:
       - "@syncOptions"
       - "@logService"
       - "@deploymentService"
+      - "@github"
       - "@session"
       - "%root%/bin/pusher.php"
       - "%build.user%"
