--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-compass": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-autoprefixer": "^0.7.2"
   }
 }
