--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/dependency-injection":     "*",
         "symfony/config":                   "*",
         "symfony/yaml":                     "*",
-        "twig/twig":                        "1.*"
+        "twig/twig":                        "1.*",
+        "ql/hal-core":                      "~2.0@dev"
     },
     "require-dev": {
         "mockery/mockery":                  "*",
