Adding hal-core to DI container.
- Cleanup.
- Changing from lib to src for namespace root.
- Updating composer dep versions to use something other than star.
- Starting to cleanup the di container.
- More config cleanup.
- Updated arrangements page to groups page. Switching to doctrine repository.
- Removing old arrangement list page.
- Adding group page, replaces arrangement. Updating routes and di. Removing old arrangement page.
- Migrating user page to doctrine. Renaming to profile page. Defaulting to current user. Updating url.
- Safely handle weird environment ordering
- Add bin to refresh assets and compile all the sassness
- Add fancy sorting when reordering envs
- Add styles for sortable envs

--- a/app/config.prod.yml
+++ b/app/config.prod.yml
@@ -1,6 +1,6 @@
 imports:
-  -
-    resource: di.yml
+  - resource: di.yml
+  - resource: ../vendor/ql/hal-core/config/di.yml
 
 parameters:
   debug:            false
