--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "grunt-contrib-compass": "~0.5.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-autoprefixer": "^0.7.2"
+    "grunt-autoprefixer": "^0.7.2",
+    "grunt-cli": "~0.1.13"
+  },
+  "peerDependencies": {
+    "grunt-cli": "~0.1.13"
   }
 }
