--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -2,7 +2,7 @@
 <phpunit
         backupGlobals="false"
         backupStaticAttributes="false"
-        bootstrap="vendor/autoload.php"
+        bootstrap="../vendor/autoload.php"
         cacheTokens="true"
         colors="true"
         convertErrorsToExceptions="true"
@@ -31,7 +31,7 @@
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>lib/</directory>
+            <directory>src/</directory>
         </whitelist>
     </filter>
 
