--- a/app/config.dev.yml
+++ b/app/config.dev.yml
@@ -5,9 +5,22 @@ imports:
 parameters:
   debug:            true
 
+  # OLD DB (need both for now)
   db.dsn:           "mysql:host=localhost;dbname=hal;charset=utf8"
   db.user:          "root"
   db.pass:          ""
+
+  # NEW DB (need both for now)
+  doctrine.mappings:
+    - "%root%/src/QL/Hal/Core/Entity"
+  doctrine.devmode:   true
+  doctrine.connection:
+    driver:         pdo_mysql
+    host:           localhost
+    user:           root
+    password:
+    dbname:         hal
+
   build.user:       "mcolf"
   build.dir:        "/tmp"
   build.async:      false
@@ -17,6 +30,8 @@ parameters:
   ldap.host:        "ldap.example.com"
   ldap.domain:      "MI"
   ldap.baseDn:      "DC=mi,DC=corp"
+  ldap.username:    "placeholder"
+  ldap.password:    "placeholder"
 
   email.hostname:     mail.example.com
   email.subject:      "HAL9000 - {repo} [{status}][{env}][{server}]"
