--- a/app/di.yml
+++ b/app/di.yml
@@ -378,6 +378,23 @@ services:
       - @repository.repo
       - @push.repo
 
+  repository.build.history.twig:
+    class: "Twig_Template"
+    arguments:
+      - "repository.build.history.twig"
+    factory_service: "twigEnv"
+    factory_method: "loadTemplate"
+
+  repository.build.history.page:
+    class: "QL\\Hal\\Controllers\\Repository\\RepositoryBuildHistoryController"
+    arguments:
+      - @repository.build.history.twig
+      - @layout
+      - @doctrine.em
+      - @repository.repo
+      - @build.repo
+      - @user
+
   ######################################################################################################################
   # ADMIN PAGE LAYOUTS & CONTROLLERS
   ######################################################################################################################
