--- a/app/routes.yml
+++ b/app/routes.yml
@@ -55,13 +55,12 @@ repo:
 # BUILD ROUTES
 ########################################################################################################################
 
-### STUB - FIX ME
 build.history:
   method:     "GET"
   route:      "/repos/:repo/build/history(/page/:page)"
   stack:
     - login.bouncer
-    - nyi.page
+    - repository.build.history.page
   conditions:
     repo:     "[A-Za-z0-9_-]+"
     page:     "[0-9]+"
